buildscript{

	configurations.classpath {resolutionStrategy.cacheDynamicVersionsFor 0,'seconds'}

	repositories{
		mavenCentral()
		jcenter()
	}

	dependencies{
		classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.1.RELEASE")
	}

}

apply plugin: "java"
apply plugin: "eclipse"
apply plugin: "org.springframework.boot"

sourceCompatibility = "1.8"
targetCompatibility = "1.8"


task wrapper(type:Wrapper){
	gradleVersion = "3.1"
}

repositories{
     mavenCentral()
     jcenter()
}

subprojects{
	subProject ->
		apply plugin:"java"
		apply plugin: "eclipse"
		apply plugin: "idea"
		apply plugin: "org.springframework.boot"
		apply plugin: "findbugs"

	findbugs{
		ignoreFailures = false
		toolVersion = "3.0.1"
		sourceSets = [sourceSets.main]
		reportsDir = file("$project.buildDir/reports/findbugs")
		effort = "max"
	}


	repositories{
                mavenCentral()
                jcenter()
        }

	configurations {
		runtime.exclude group: "org.slf4j", module: "slf4j-log4j12"
	}

	sourceCompatibility = 1.8

}

subprojects.each { subproject -> evaluationDependsOn( subproject.path ) }
jar.dependsOn subprojects.tasks['classes']

jar {
  baseName = 'expr4j'
  manifest {
    attributes 'Main-Class': 'com.ericsson.expr4j.api.boot.Application'
  }
  subprojects.each { subproject ->
    from subproject.sourceSets.main.output.classesDir
    from subproject.sourceSets.main.output.resourcesDir
  }
}

springBoot{
	mainClass="com.ericsson.expr4j.api.boot.Application"
}

